--- a/Shareable/Storm.yml
+++ b/Shareable/Storm.yml
@@ -14,6 +14,8 @@ Nightmaretier1:
     Scale: 1
     MovementSpeed: 0.5
     KnockbackResistance: 100
+    Silent: true
+    PreventSunburn: true
   BossBar:
     Enabled: false
     Title: '&c&lTURNED OFF!'
@@ -30,21 +32,21 @@ Nightmaretier1:
    - particlelinehelix{Fo=true;db=0.4;hl=4;syo=1;p=reddust;color=#191919;hr=0.5;md=40} @Target ~onTimer:200
    - particlelinehelix{Fo=true;db=0.4;hl=4;syo=1;p=reddust;color=#191919;hr=0.5;md=40} @Target ~onTimer:150
    - particlelinehelix{Fo=true;db=0.4;hl=4;syo=1;p=reddust;color=#191919;hr=0.5;md=40} @Target ~onTimer:100
-   - damage{d=7} @Target ~onTimer:200
-   - damage{d=7} @Target ~onTimer:150
-   - damage{d=7} @Target ~onTimer:100
-   - stopsound{s=entity.zombie.ambient} @PIR{r=10} ~onTimer:1
-   - setvariable{s=mythicplayer;v=<trigger.name>} @self ~onSpawn 
-   - delay 20
-   - fakelightning @self ~OnSpawn
-   - setname{n=<caster.name>;delay=2} @self ~onTimer:1
+   - damage{d=7} @Target ~onTimer:200 #@target offers unlimited range, since it's just checking that the the caster HAS a target, then damages it no matter the distance. 
+   - damage{d=7} @Target ~onTimer:150 #I'd recommend a condition if you insit on using @target. otherwise I'd find a different targeter
+   - damage{d=7} @Target ~onTimer:100 ?targetwithin{d=5} #can only damage if the target is within 5 blocks
+  #  - stopsound{s=entity.zombie.ambient} @PIR{r=10} ~onTimer:1 #useless. just do the Silent Mob option (added above) Options.Silent true
+  #  - setvariable{var=caster.mythicplayer;val=<trigger.name>} @self ~onSpawn #Had to fix this variable set. there was no scope and the attributes were incorrect. 
+   - fakelightning @self ~onSpawn
+   - setname{n=<caster.name>;delay=2} @self ~onDamaged #Changed ~onTimer:1 to ~onDamaged. It's a better trigger for updating the health. But there's a backup one below as well
+   - setname{n=<caster.name>;delay=2} @self ~onTimer:20 #Changed ~onTimer:1 to ~onDamaged AND ~onTimer:20. Better performance
    - command{c="ecoskills give <target.name> nightmaretrial 25"} @Target ~onDeath
    - command{c="libreforge points set <target.name> intrial 0"} @Target ~onDeath
    - command{c="libreforge points set <target.name> intrial 0"} @Target ~onPlayerKill
    - remove @self ~onPlayerKill
    - remove{delay=2400} @self ~onSpawn
    - message{m="&cThe boss despawned because the timer ran out or you died!"} @Target ~onDespawn
-   - setvariable{var="owner";scope=global;value="<trigger.name>"} @self ~onSpawn
+  #  - setvariable{var="owner";scope=global;value="<trigger.name>"} @self ~onSpawn #useless, since there is no trigger entity for the ~onSpawn trigger. 
    - skill{s=[
       - setvariable{var=caster.timer;val="<caster.var.timer|120> - 1" }
       ]} @self ~onTimer:20
